--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="#">
+                    <img style="width: 100px;" alt="Logo" src="/Content/Images/logo.png">
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
