--- a/ServiceCatalog/Views/Deployment/DeployView.cshtml
+++ b/ServiceCatalog/Views/Deployment/DeployView.cshtml
@@ -15,7 +15,7 @@
         {
             <table class="table table-bordered table-responsive table-hover">
                 <tr>
-                    <th>Json Name</th>
+                    <th>Template Name</th>
                     <th>Comments</th>
                     <th>Version</th>
                     <th>Link To Template</th>
