--- a/ServiceCatalog/Views/Template/UpdateTemplateView.cshtml
+++ b/ServiceCatalog/Views/Template/UpdateTemplateView.cshtml
@@ -85,7 +85,7 @@
                     aria_describedby = "fileHelp"
                 })
                 <small id="fileHelp" class="form-text text-muted">
-                    Choose a local file or specify a link. <br>e.g. http://contoso.com/template.json
+                    Choose a local file or specify a link, e.g.:<br> http://contoso.com/template.json
                 </small>
                 @Html.ValidationMessageFor(m => m.TemplateData)
             </div>
