--- a/ServiceCatalog/Views/Template/CreateTemplateView.cshtml
+++ b/ServiceCatalog/Views/Template/CreateTemplateView.cshtml
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 @Html.TextBoxFor(m => m.TemplateData, new { @class = "add-template-input form-control", type = "file", accept = ".json", aria_describedby = "fileHelp" })
                 <small id="fileHelp" class="form-text text-muted">
-                    Choose a local file or specify a link. <br>e.g. http://contoso.com/template.json
+                    Choose a local file or specify a link, e.g.:<br> http://contoso.com/template.json
                 </small>
                 @Html.ValidationMessageFor(m => m.TemplateData)
             </div>
