--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img style="width: 100px;" alt="Logo" src="/Content/Images/logo.png">
+                    <img style="max-width: 100px;max-height: 18px;" alt="Logo" src="/Content/Images/logo.png">
                 </a>
             </div>
             <div class="navbar-collapse collapse">
