--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="@Url.Action("DeployView", "Deployment")">
                     <img style="max-width: 100px;max-height: 18px;" alt="Logo" src="/Content/Images/logo.png">
                 </a>
             </div>
