--- a/ServiceCatalog/Views/Template/CreateTemplateView.cshtml
+++ b/ServiceCatalog/Views/Template/CreateTemplateView.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(m => m.TemplateData, new { @class = "col-sm-2 control-label" })
             <div class="col-md-4">
-                @Html.TextBoxFor(m => m.TemplateData, new { @class = "add-template-input form-control", type = "file", accept = ".json", aria_describedby = "fileHelp" })
+                @Html.TextBoxFor(m => m.TemplateData, new { @class = "add-template-input choose-button form-control", type = "file", accept = ".json", aria_describedby = "fileHelp" })
                 <small id="fileHelp" class="form-text text-muted">
                     Choose a local file or specify a link, e.g.:<br> http://contoso.com/template.json
                 </small>
