--- a/ServiceCatalog/Views/Template/UpdateTemplateView.cshtml
+++ b/ServiceCatalog/Views/Template/UpdateTemplateView.cshtml
@@ -23,7 +23,7 @@
             <div class="col-md-4">
                 @Html.TextBoxFor(m => m.TemplateData, new
                 {
-                    @class = "add-template-input form-control",
+                    @class = "add-template-input choose-button form-control",
                     type = "file",
                     accept = ".json",
                     aria_describedby = "fileHelp"
