--- a/ServiceCatalog/Views/Deployment/ManageView.cshtml
+++ b/ServiceCatalog/Views/Deployment/ManageView.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model ServiceCatalog.Models.TemplateViewModel
+﻿@model ServiceCatalog.Models.TemplateViewModel
 
 @{
     ViewBag.Title = "Manage";
@@ -11,100 +10,9 @@
         <h4>Manage View</h4>
         <hr />
         @Html.ValidationSummary(true)
-        var count = 0;
-        if (ViewBag.Templates != null && ViewBag.Templates.Count > 0)
-        {
-            <table class="table table-bordered table-responsive table-hover">
-                <tr>
-                    <th>Template Name</th>
-                    <th>Comments</th>
-                    <th>Version</th>
-                    <th>Link To Template</th>
-                    <th>Visualize</th>
-                    <th>Deploy</th>
-                    @if (ViewBag.IsAdmin)
-                    {
-                        <th>Manage</th>
-                    }
-                    <th>Access</th>
-                </tr>
-                @foreach (var template in ViewBag.Templates)
-                {
-                    <tr>
-                        <td>@template.TemplateName</td>
-                        <td>@template.Comment</td>
-                        <td>@template.TemplateJsonVersion</td>
-                        <td>
-                            <div class="col-md-3">
-                                @Html.ActionLink("Download JSON template", "GetJsonTemplateFile", "Deployment",
-                                    new { templateId = template.TemplateId },
-                                    new { @class = "btn btn-primary" })
-                            </div>
-                        </td>
-                        <td>
-                            <div class="col-md-3">
-                                @Html.ActionLink("Visualize", "Visualize", "Deployment",
-                                    new { templateId = template.TemplateId },
-                                    new { @class = "btn btn-primary", target = "_blank" })
-                            </div>
-                        </td>
-                        <td>
-                            <div class="col-md-3">
-                                @Html.ActionLink("Deploy", "ParametersView", "Parameters",
-                                    new { templateId = template.TemplateId, isManage = true },
-                                    new { @class = "btn btn-primary" })
-                            </div>
-                        </td>
-                        @if (ViewBag.IsAdmin)
-                        {
-                            <td>
-                                <div class="btn-group" style="min-width: 120px;">
-                                    @Html.ActionLink("Edit", "UpdateTemplateView", "Template",
-                                        new { templateId = template.TemplateId },
-                                        new { @class = "btn btn-warning" })
-                                    @Html.ActionLink("Delete", "DeleteTemplate",
-                                        new { controller = "Deployment", templateId = template.TemplateId },
-                                        new { @class = "btn btn-danger", onclick = "return confirm('Are you sure you wish to delete this article?');" })
-                                </div>
-                            </td>
-                        }
-                        <td>
-                            <a class="btn btn-primary show-button" data-toggle="modal" data-target="#outputsModal">
-                                Show Access List
-                                <p id="output-@count" style="display: none;">
-                                    @template.TemplateUsersGroup
-                                </p>
-                            </a>
-                        </td>
-                    </tr>
-                    count++;
-                }
-            </table>
-        }
-        else
-        {
-            <p>No records to display</p>
-        }
+        Html.RenderPartial("_TemplateView");
     }
-
     @{
         Html.RenderPartial("_Modal");
     }
 </div>
-
-@section scripts
-{
-    <script>
-        if (!window.jQuery) {
-            console.error("jQuery is not defined");
-        } else {
-            (function ($) {
-                $('.show-button').click(function (event) {
-                    $('#myModal').modal('show');
-                    $('#myModalLabel').text('Access List');
-                    $('#outputsModalBody').val($.trim(event.target.children[0].innerText));
-                });
-            })(window.jQuery);
-        }
-    </script>
-}
