--- a/ServiceCatalog/Views/Shared/_Layout.cshtml
+++ b/ServiceCatalog/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using ServiceCatalog.Common.Helpers
+﻿@using System.Web.Configuration
+@using ServiceCatalog.Common.Helpers
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,7 +24,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="@Url.Action("DeployView", "Deployment")">
-                    <img style="max-width: 100px;max-height: 18px;" alt="Logo" src="/Content/Images/logo.png">
+                    <img style="max-width: 100px;max-height: 18px;" alt="Logo" src="@WebConfigurationManager.AppSettings[ConfigurationConstants.LogoUrlName]">
                 </a>
             </div>
             <div class="navbar-collapse collapse">
