--- a/ServiceCatalog/Content/Site.css
+++ b/ServiceCatalog/Content/Site.css
@@ -151,7 +151,11 @@ textarea,
 
 .template-table-body-comment {
     max-width: 170px;
+    max-height: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
+    color: white !important;
+    text-decoration: none !important;
+    cursor: pointer;
 }
